<resources>
    <string name="app_name" translatable="false">FreaksLabor</string>
    <string name="peoplenear">People near me</string>
    <string name="friends">Friends</string>
    <string name="coffee">Support</string>
    <string name="activate">Activate</string>
    <string name="description">An interactive social-media app, that is supposed to motivate people
    to meet new friends and more. It works with Bluetooth LE, which scans the surroundings anonymously
    and notifys you, if it finds marked friends of you or new people, that have the same interests
    as you. So, if you want to enter a new adventure, let\'s start it!</string>
    <string name="askforpermission">By pressing on "Sign In", you accept the <a href="https://github.com/Turksat46/FreaksLabor/blob/master/eula.md">EULA</a> and please allow some necessary permissions and let\'s start immediately! This app works
    with the internet and does send data to a server! We save data to Firebase, a cloud-solution provided by Google, such as profile details, friends, time spend with
    them and more. But, if you don\'t trust the app, you can have a look at the Github page! A more precise list of data, that is collected and saved online can be found on the
    official Github!</string>
    <string name="supporttext">If you need help or have some questions, feel free to contact me through E-Mail. Or if you are feeling lucky and you want to support the work, feel free to buy me a coffee instead :D</string>
    <string name="title_activity_setupfreakslab">setupfreakslab</string>
    <string name="bioTitleText">Biography</string>
    <string name="friendTitleText">Friend</string>
    <string name="addFriendButton">Add as Friend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="turksat46">Turksat46</string>
    <string name="placesnearby">Places Near You</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="debug_header">Debug</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">profileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ble_uuid">cf311e84-391c-4761-933d-69744f98998f</string>
    <string name="title_activity_setup">setupActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_main">newMainActivity</string>
    <string name="title_activity_starting">StartingActivity</string>

    <string name="switchbutton">Switch View</string>

</resources>