<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/mainbackground"
    tools:context=".MainActivity">

  <view
      android:id="@+id/camera_view"
      class="com.turksat46.freakslabor.CameraView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:visibility="gone" />

  <FrameLayout
      android:id="@+id/frameLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp"
      android:alpha="1"
      android:animateLayoutChanges="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/camera_view"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

      <androidx.cardview.widget.CardView
          android:id="@+id/profilecard"
          android:layout_width="wrap_content"
          android:layout_height="54dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="10dp"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="5dp"
          app:cardElevation="2dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

          <de.hdodenhof.circleimageview.CircleImageView
              android:id="@+id/personalimg"
              android:layout_width="32dp"
              android:layout_height="32dp"
              android:layout_gravity="center"
              android:layout_margin="5dp"
              android:src="@drawable/logo"
              android:transitionName="profileimgtrans" />

          <TextView
              android:id="@+id/personalnameText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="10dp"
              android:layout_marginBottom="10dp"
              android:contentDescription="Username"
              android:text="Turksat46"
              android:textAppearance="@style/TextAppearance.AppCompat.Display1"
              android:textColor="#FFFFFF"
              android:textSize="16sp"
              android:transitionName="textusernametrans"
              android:visibility="gone"
              tools:visibility="gone" />
        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/titlecard"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="20dp"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="5dp"
          app:cardElevation="2dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/logoImageView"
              android:layout_width="50dp"
              android:layout_height="55dp"
              android:adjustViewBounds="false"
              android:cropToPadding="false"
              android:scaleType="centerInside"
              app:srcCompat="@drawable/logoforeground"
              app:tint="#FFFFFF" />

          <TextView
              android:id="@+id/titletext"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="10dp"
              android:layout_marginBottom="10dp"
              android:text="@string/app_name"
              android:textAppearance="@style/TextAppearance.AppCompat.Display1"
              android:textColor="#FFFFFF"
              android:textSize="24sp"
              android:textStyle="bold" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:animateLayoutChanges="true"
        android:background="#00000000">

      <androidx.cardview.widget.CardView
          android:id="@+id/statuscard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="10dp"
          android:visibility="gone"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="5dp"
          app:layout_constraintBottom_toTopOf="@+id/peoplenearCard"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/titlecard"
          tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

          <ProgressBar
              android:id="@+id/progressBar"
              style="?android:attr/progressBarStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="5dp"
              android:layout_marginTop="5dp"
              android:layout_marginEnd="5dp"
              android:layout_marginBottom="5dp"
              android:indeterminate="true"
              android:indeterminateOnly="true" />

          <TextView
              android:id="@+id/statusTextView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginEnd="20dp"
              android:gravity="center"
              android:text="Searching for people"
              android:textAlignment="center"
              android:textColor="#FFFFFF"
              android:textSize="20sp"
              android:textStyle="bold" />
        </LinearLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/peoplenearCard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_marginStart="10dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="10dp"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="5dp"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/statuscard">

        <TextView
            android:id="@+id/peoplenearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/peoplenear"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reloadbutton"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="5dp"
            app:icon="@android:drawable/stat_notify_sync"
            app:iconPadding="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:persistentDrawingCache="all" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:fadingEdge="vertical"
            android:fastScrollEnabled="true"
            android:smoothScrollbar="true"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/activatebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/activate"
            android:visibility="gone"
            tools:visibility="gone" />

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/friendsCard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="10dp"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/peoplenearCard">

        <TextView
            android:id="@+id/friendsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/friends"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/friendsbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="Invite some friends" />

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/spotifycard"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:visibility="gone"
          app:layout_constraintBottom_toTopOf="parent"
          app:layout_constraintEnd_toStartOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:visibility="gone">

        <ImageView
            android:id="@+id/songCoverView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/songtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/buycoffeecard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="10dp"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/friendsCard">

        <TextView
            android:id="@+id/explainingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/supporttext"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coffeetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coffee"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

          <Button
              android:id="@+id/contactbutton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginRight="10dp"
              android:layout_weight="1"
              android:text="Contact" />

          <Button
              android:id="@+id/supportbutton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_weight="1"
              android:text="Support dev" />
        </LinearLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/changeViewButton"
          android:layout_width="wrap_content"
          android:layout_height="65dp"
          android:layout_marginEnd="10dp"
          android:layout_marginBottom="20dp"
          app:cardBackgroundColor="@color/card"
          app:cardCornerRadius="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/imageView"
              android:layout_width="40dp"
              android:layout_height="50dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="10dp"
              android:layout_marginBottom="10dp"
              app:srcCompat="@drawable/ic_baseline_camera_alt_24"
              app:tint="#FFFFFF" />

          <TextView
              android:id="@+id/cameraViewText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="10dp"
              android:layout_marginBottom="10dp"
              android:layout_weight="1"
              android:text="Cameraview"
              android:textAlignment="center"
              android:textColor="#FFFFFF"
              android:textSize="30sp"
              android:textStyle="bold" />
        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <LinearLayout
          android:id="@+id/debugView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginBottom="20dp"
          android:orientation="vertical"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          tools:visibility="gone">

        <TextView
            android:id="@+id/appVersionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/cameraWidthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/cameraHeightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        tools:visibility="gone">

      <androidx.cardview.widget.CardView
          android:id="@+id/background"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginBottom="10dp"
          app:cardBackgroundColor="#77838383"
          app:cardCornerRadius="20dp"
          app:cardElevation="0dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>